[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }

