[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.4", features = ["cors"] }
axum = "0.6"
tower = "0.4"
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }  # Adjust the version as necessary
rand = "0.8"
url = "2.2.2"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
serde_json = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"

